--- a/catalog_admin.html
+++ b/catalog_admin.html
@@ -81,9 +81,9 @@
         <input id="search" placeholder="Search products..." style="flex:1" />
         <button id="clear-search" class="btn">Clear</button>
         <button id="export" class="btn">Export CSV</button>
-        <button id="export-xlsx" class="btn">Export Excel (.xlsx, no dropdowns)</button>
+        <button id="export-xlsx" class="btn">Export Excel</button>
         <button id="blank-csv" class="btn">Download Blank CSV</button>
-        <button id="download-xlsx" class="btn">Download Excel Template (.xlsx with dropdowns)</button>
+        <button id="download-xlsx" class="btn">Download Excel Template</button>
         <button id="import" class="btn">Import CSV/XLSX</button>
         <input id="csv-file" type="file" accept=".csv,.xlsx" style="display:none" />
       </div>
