Fix syntax error in ADMIN_UIDS declaration

--- a/index.html
+++ b/index.html
@@ -198,7 +198,9 @@
     /* ---------- Config & helpers ---------- */
     const ADMIN_UIDS = new Set([
       "In9nS195FPamjwoTM8aHDjJRq8r2",
-      "csKdZoNF3ufwPVNS1tUmeRFzCnF2"
+      "csKdZoNF3ufwPVNS1tUmeRFzCnF2",
+      "Jfv7ZLEp5ibImVdVcpglH9ZhWlK2",
+      "KzhMNBQPlOMcPhRAUOKNWRcbdjK2"
     ]);
     const $ = (id)=>document.getElementById(id);
 
