Add new admin UIDs to Firebase set

--- a/catalog_admin.html
+++ b/catalog_admin.html
@@ -149,7 +149,9 @@
     /* ---------- Firebase ---------- */
     const ADMIN_UIDS = new Set([
       "In9nS195FPamjwoTM8aHDjJRq8r2",
-      "csKdZoNF3ufwPVNS1tUmeRFzCnF2"
+      "csKdZoNF3ufwPVNS1tUmeRFzCnF2",
+      "Jfv7ZLEp5ibImVdVcpglH9ZhWlK2",
+      "KzhMNBQPlOMcPhRAUOKNWRcbdjK2"
     ]);
 
     const firebaseConfig = {
