--- a/catalog_admin.html
+++ b/catalog_admin.html
@@ -51,7 +51,7 @@
         </label>
         <label>Base Unit
           <select id="baseUnit">
-            <option value="each">each</option><option value="piece">piece</option>
+            <option value="case">case</option><option value="each">each</option><option value="piece">piece</option>
             <option value="kg">kg</option><option value="g">g</option><option value="lb">lb</option>
             <option value="L">L</option><option value="ml">ml</option><option value="fl oz">fl oz</option>
           </select>
