Add 'case' to allowed units in catalog_admin.html

--- a/catalog_admin.html
+++ b/catalog_admin.html
@@ -198,7 +198,7 @@
     };
 
     /* ---------- State ---------- */
-    const ALLOWED_UNITS = ["each","piece","kg","g","lb","L","ml","fl oz"];
+    const ALLOWED_UNITS = ["case","each","piece","kg","g","lb","L","ml","fl oz"];
     let _lastGoodRows = [];
     let editId = null;
 
