--- a/index.html
+++ b/index.html
@@ -301,8 +301,8 @@
       ml:{units:["ml","L","fl oz"],toBase:{ml:1, L:1000, "fl oz":1000/33.814}},
       kg:{units:["kg","g","lb"],toBase:{kg:1, g:1/1000, lb:1/2.20462}},
       g:{units:["g","kg","lb"],toBase:{g:1, kg:1000, lb:1000/2.20462}},
-      lb:{units:["lb","kg","g"],toBase:{lb:1, kg:2.20462, g:1/453.592}},           /* fixed */
-      "fl oz":{units:["fl oz","L","ml"],toBase:{"fl oz":1, L:33.814, ml:0.033814}}  /* fixed */
+      lb:{units:["lb","kg","g"],toBase:{lb:1, kg:2.20462, g:1/453.592}},
+      "fl oz":{units:["fl oz","L","ml"],toBase:{"fl oz":1, L:33.814, ml:0.033814}}
     };
     const allowedUnits = (baseUnit,useConversions)=>{
       const sys = unitSystems[baseUnit] || {units:[baseUnit],toBase:{[baseUnit]:1}};
@@ -505,9 +505,16 @@
           const upd={}; upd[`logs/${from}/${selectedMonth}/${key}`]=out; upd[`logs/${to}/${selectedMonth}/${key}`]=inn;
           await db.ref().update(upd);
         }
-      }catch(e){ console.error("Submit failed:", e); return alert("Submit failed: "+(e?.code||e?.message||e)); }
+      }catch(e){
+        console.error("Submit failed:", e);
+        return alert("Submit failed: "+(e?.code||e?.message||e));
+      }
 
-      $("items-container").innerHTML=""; $("date").valueAsDate=new Date(); $("to").selectedIndex=0; addItem(); requestLoadLogs();
+      $("items-container").innerHTML="";
+      $("date").valueAsDate=new Date();
+      $("to").selectedIndex=0;
+      addItem();
+      requestLoadLogs();
     }
 
     /* ---------- Invoice ---------- */
@@ -657,3 +664,4 @@
   </script>
 </body>
 </html>
+
